client side: Add Project Modal inputs done + Select coach linked to Project

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,5 +14,5 @@
 
 body, html {
     height: 100%;
-    /* background-color: theme('colors.main.DEFAULT') !important; */
+    background-color: theme('colors.main.DEFAULT') !important;
   }
