--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,14 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: initial;
+  overflow: hidden;
+}
+
 body, html {
-    height: 100%;
+  width: 100%;
+    min-height: 100%;
     background-color: theme('colors.main.DEFAULT') !important;
   }
+
